# chartout

./: .gitignore  README.md  pixi.toml  test.ipynb  test_texture.ipynb
.github/workflows/: pages.yml  publish.yml
chartout/: __init__.py  cart.py  dependencies.py  develop.py  models.py  store.py  support.py  texture.py  texture_org.py  tile.py  widget.py
docs/: .gitignore  README.md  getting-started.mdx  index.mdx  next.config.ts  package-lock.json  package.json  source.config.ts  tsconfig.tsbuildinfo
docs/app/: globals.css  layout.tsx
docs/app/docs/: layout.tsx
docs/app/docs/[[...slug]]/: page.tsx
docs/components/demo/: CartDemo.tsx  CartItemDemo.tsx  GettingStartedDemo.tsx  VizLikeDemo.tsx  charts.ts  index.ts
docs/components/docs/: Journey.tsx  Tabs.tsx
docs/content/docs/: how-it-works.mdx  index.mdx  meta.json
docs/javascript/: widget.mdx
docs/lib/: basePath.ts  source.ts
docs/public/: CNAME  barley-trail.json  faithful-histogram.json  faithful.json  imdb-histogram.json
docs/python/: api.mdx
docs/scripts/: generate_example_charts.py
javascript/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
javascript/.claude/: launch.json
javascript/src/: App.tsx  ChartoutWidget.tsx  chartout-render.d.ts  charts.ts  examples.ts  faithful.json  main.tsx  model.ts  polyfills.ts  rasterise.ts
python/: README.md  chartout.ipynb  pyproject.toml  test.ipynb
python/chartout/: __init__.py  cart.py  models.py  store.py  support.py
python/tests/: test_chartout.py
tests/: test_chartout.py
(+33 files in other folders)
