[project]
name = "chartout"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mattijn van Hoek", email = "mattijn@gmail.com" }
]
requires-python = ">=3.11"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Documentation = "https:/chartout.io"
Source = "https://github.com/mattijn/chartout"

[tool.hatch.version]
path = "chartout/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
include = ["/chartout"]