[project]
name = "chartout"
description = "Print your insights, anytime, anywhere"
readme = "README.md"
authors = [
    { name = "Mattijn van Hoek", email = "mattijn@gmail.com" }
]
requires-python = ">=3.11"
dynamic = ["version"]
dependencies = [
    "anywidget",
    "traitlets",
]

[project.optional-dependencies]
altair = [
    "altair[save]>=6",
]
matplotlib = [
    "matplotlib",
]
plotly = [
    "plotly",
    "kaleido",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://www.chartout.io"
Documentation = "https://www.chartout.io"
Source = "https://github.com/hoekinsights/chartout"

[tool.hatch.version]
path = "chartout/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
include = ["/chartout"]
exclude = ["/chartout/develop.py"]
